# 21-EuroParl

./: .gitignore  README.md  analyze.ipynb  pyproject.toml  trad.py
data/: lid.ipynb  merge_align.ipynb  rdf.py
text2text/: __init__.py  hf_dl.py  metrics.py  prompt.py  utils.py
